@@ -44,7 +44,9 @@
 #include <linux/stat.h>
 #include <asm/uaccess.h>
 #include <linux/slab.h>
+#ifdef HAVE_SEGMENT_H
 #include <asm/segment.h>
+#endif
 
 #include <libcfs/kp30.h>
 #include <obd.h>
